Cleaned up todo list with people assigned :)

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -6,96 +6,54 @@
 - Contributions of each team member
 
 ## Navigation
-- All navbars need to be consistent
+- All navbars need to be consistent - `Adam`
 - Logout Button
 - Remove dropdown
 
 ## Dashboard
 - My projects section needs to work
-- Subtasks
+  - Emoji for if you are leader of project
+- Subtasks - `Adam`
+  - As a popup when click on a BIGTASK
+  - Progress
 - Remove People Icon from Tasks
 - Filter By
 
 ## Manager Dashboard
-- Employee Workload
-- Project time resource allocation estimate thingy MAFS
-- Create project button
+- Employee Workload - `Adam`
+- Project time resource allocation estimate thingy MAFS - `Adam`
+  - (Manhours / #employeesWorking) / 8 = Days of work remaining
+- Create project button - `Adam`
 
 ## Project Page
 - Tasks need to appear
-- Assigning to tasks
-- Client Details
-- Employee profile linking
+  - Only the tasks a user is assigned to should appear if they are an employee.
+  - All of the tasks need to appear if the user is the team leader -- or the project manager.
+- Assigning users to tasks
+  - Inside create new task option.
+- Client Details - `Calin`
+- Employee profile linking - `Calin`
 
 ## Client Page
-- Make it functional
+- Make it functional - `Calin`
 
 ## Profile Page
-- Information for different profiles
+- Information for different profiles - `Jack`
 
 ## Profile Edit Page
-- Move it to the new url
+- Move it to the new url - `Jack`
 
 ## Knowledge
-- Search functionality work
-- Link to create new work
+- Search functionality work - `Tom`
+- Link to create new post
 
 ## Knowledge Search Results
-- Make it look a lil nice
-- Make the search work
+- Make it look a lil nice - `Rowan`
+- Make the search work - `Tom`
 
 ## Posts
-  - Add some fake posts
-  - Key to the md
+  - Add some fake posts - `Tom`
+  - Key to the md - `Tom`
 
-# PEEPS
-
-- **Adam** - Tasks need subtasks
-  - Just a popup box?
-  - Task view filtering
-
-- **Rowan** - Login
-  - User needs to be able to login!
-  - Username and password validation
-
-- **Calin** - Project page more info
-  - Client page.
-  - Make the tasks appear kanban.
-  - Create task button with assigning user.
-
-- **Tom & Rowan** - Knowledge management
-  - Make it (all) pretty
-    - Search Results page needs looking good pls
-    - Post page mabye needs some extra stufffffff ot look cool.
-  - Make the search work
-  - Add some fake posts
-  - Key to the md
-  - Something else
-
-- **Adam** - Managers see info about employees
-  - Create a bloody project
-    - api.createProject()
-  - (Manhours / #employeesWorking) / 8 = Days of work remaining
-
-- **Jack** - Profile View
-
-- My projects in card
-  - Emoji for if you are leader of project
-
-## Who's doing what
-- View Post page
-
-- Edit post page
-    - Tom
-    - Rowan
-
-- Search page(s)
-    - Rowan
-
-- Manager Dashboard
-    - Adam
-
-
-## Our Understanding
-- Team leader is a project manager
-- A manager is a manager not a project manager (manages 'almost' everything)
+## Login
+  - Need to be able to login - `Rowan`
