--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -31,11 +31,11 @@
   - All of the tasks need to appear if the user is the team leader -- or the project manager.
 - Assigning users to tasks
   - Inside create new task option.
-- Client Details - `Calin`
+- Client Details - `Calin` **DONE**
 - Employee profile linking - `Calin`
 
 ## Client Page
-- Make it functional - `Calin`
+- Make it functional - `Calin` **DONE**
 
 ## Profile Page
 - Information for different profiles - `Jack`
