Create project button

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -6,11 +6,13 @@
 - Contributions of each team member
 
 ## Navigation
+
 - All navbars need to be consistent - `Adam`
 - ~~Logout Button~~ - `Tom`
 - ~~Remove dropdown~~ - `Tom`
 
 ## Dashboard
+
 - My projects section needs to work
   - Emoji for if you are leader of project
 - Subtasks - `Adam`
@@ -20,12 +22,14 @@
 - Filter By
 
 ## Manager Dashboard
+
 - Employee Workload - `Adam`
 - Project time resource allocation estimate thingy MAFS - `Adam`
   - (Manhours / #employeesWorking) / 8 = Days of work remaining
-- Create project button - `Adam`
+- ~~Create project button~~ - `Adam`
 
 ## Project Page
+
 - Tasks need to appear
   - Only the tasks a user is assigned to should appear if they are an employee.
   - All of the tasks need to appear if the user is the team leader -- or the project manager.
@@ -35,25 +39,32 @@
 - Employee profile linking - `Calin`
 
 ## Client Page
+
 - ~~Make it functional~~ - `Calin`
 
 ## Profile Page
+
 - Information for different profiles - `Jack`
 
 ## Profile Edit Page
+
 - ~~Move it to the new url~~ - `Tom`
 
 ## Knowledge
+
 - Search functionality work - `Tom`
 - Link to create new post
 
 ## Knowledge Search Results
+
 - Make it look a lil nice - `Rowan`
 - Make the search work - `Tom`
 
 ## Posts
-  - Add some fake posts - `Tom`
-  - Key to the md - `Tom`
+
+- Add some fake posts - `Tom`
+- Key to the md - `Tom`
 
 ## Login
-  - ~~Need to be able to login~~ - `Tom`
+
+- ~~Need to be able to login~~ - `Tom`
