checked off worker hours count

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -24,8 +24,8 @@
 ## Manager Dashboard
 
 - Employee Workload - `Adam`
-- Project time resource allocation estimate thingy MAFS - `Adam`
-  - (Manhours / #employeesWorking) / 8 = Days of work remaining
+- ~~Project time resource allocation estimate thingy MAFS~~ - `Adam`
+  - ~~(Manhours / #employeesWorking) / 8 = Days of work remaining~~
 - ~~Create project button~~ - `Adam`
 
 ## Project Page
