--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -13,8 +13,8 @@
 
 ## Dashboard
 
-- My projects section needs to work
-  - Emoji for if you are leader of project
+- ~~My projects section needs to work~~ - `Adam`
+  - ~~Emoji for if you are leader of project~~
 - Subtasks - `Adam`
   - As a popup when click on a BIGTASK
   - Progress
