the topic dropdown when searching displays actually availible topics

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -66,6 +66,7 @@
 - ~~Add some fake posts~~ - `Tom`
 - Key to the md - `Tom`
 - Save a post if a new one is created - `Tom`
+- Create new topic option - `Tom`
 
 ## Login
 
