--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -36,7 +36,7 @@
 - Assigning users to tasks
   - Inside create new task option.
 - ~~Client Details~~ - `Calin`
-- Employee profile linking - `Calin`
+- ~~Employee profile linking~~ - `Calin`
 
 ## Client Page
 
