--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -58,7 +58,7 @@
 
 ## Knowledge Search Results
 
-- Make it look a lil nice - `Rowan`
+- ~~Make it look a lil nice~~ - `Rowan`
 - ~~Make the search work~~ - `Tom`
 - Only show a max height of each post in case they are really long - `Tom`
 
