Assigning users to tasks finished

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -33,8 +33,8 @@
 - Tasks need to appear
   - Only the tasks a user is assigned to should appear if they are an employee.
   - All of the tasks need to appear if the user is the team leader -- or the project manager.
-- Assigning users to tasks
-  - Inside create new task option.
+- ~~Assigning users to tasks~~ `Calin`
+  - ~~Inside create new task option.~~ `Calin`
 - ~~Client Details~~ - `Calin`
 - ~~Employee profile linking~~ - `Calin`
 
