--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -8,6 +8,7 @@
 ## Navigation
 
 - All navbars need to be consistent - `Adam`
+  - Logout in mobile view
 - ~~Logout Button~~ - `Tom`
 - ~~Remove dropdown~~ - `Tom`
 
@@ -53,21 +54,22 @@
 ## Knowledge
 
 - ~~Search functionality work~~ - `Tom`
-- Get list of current topics - `Tom`
+- ~~Get list of current topics~~ - `Tom`
 - ~~Link to create new post~~ - `Tom`
 
 ## Knowledge Search Results
 
 - ~~Make it look a lil nice~~ - `Rowan`
 - ~~Make the search work~~ - `Tom`
-- Only show a max height of each post in case they are really long - `Tom`
+- ~~Only show a max height of each post in case they are really long~~ - `Tom`
+- Overflow on code elements of md - `Tom`
 
 ## Posts
 
 - ~~Add some fake posts~~ - `Tom`
 - Key to the md - `Tom`
 - ~~Save a post if a new one is created~~ - `Tom`
-- Create new topic option - `Tom`
+- ~~Create new topic option~~ - `Tom`
 
 ## Login
 
