to do list updated

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -5,6 +5,9 @@
 - Client requirements document
 - Contributions of each team member
 
+## Requirements document
+- Update requirements document with the latest answers from client. - `Calin`
+
 ## Navigation
 
 - All navbars need to be consistent - `Adam`
@@ -31,11 +34,11 @@
 
 ## Project Page
 
-- Tasks need to appear
-  - Only the tasks a user is assigned to should appear if they are an employee.
-  - All of the tasks need to appear if the user is the team leader -- or the project manager.
-- Assigning users to tasks
-  - Inside create new task option.
+- ~~Tasks need to appear~~ - `Calin`
+  - ~~Only the tasks a user is assigned to should appear if they are an employee.~~
+  - ~~All of the tasks need to appear if the user is the team leader -- or the project manager.~~
+- ~~Assigning users to tasks~~ - `Calin`
+  - ~~Inside create new task option.~~
 - ~~Client Details~~ - `Calin`
 - ~~Employee profile linking~~ - `Calin`
 
