update todo for nav

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -6,11 +6,12 @@
 - Contributions of each team member
 
 ## Requirements document
+
 - Update requirements document with the latest answers from client. - `Calin`
 
 ## Navigation
 
-- All navbars need to be consistent - `Adam`
+- ~~All navbars need to be consistent~~ - `Adam`
   - Logout in mobile view
 - ~~Logout Button~~ - `Tom`
 - ~~Remove dropdown~~ - `Tom`
