its 2021 in my head

--- a/design/todo-01-11-22.md
+++ b/design/todo-01-11-22.md
@@ -30,7 +30,7 @@
 
 - Employee Workload - `Adam`
 - ~~Project time resource allocation estimate thingy MAFS~~ - `Adam`
-  - ~~(Manhours / #employeesWorking) / 8 = Days of work remaining~~
+  - ~~(workerhours / #employeesWorking) / 8 = Days of work remaining~~
 - ~~Create project button~~ - `Adam`
 
 ## Project Page
